--- a/main.css
+++ b/main.css
@@ -9,3 +9,31 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+#red {
+  border-top-color: #ff0000;
+}
+
+#orange {
+  border-top-color: #ffa500;
+}
+
+#yellow {
+  border-top-color: #ffff00;
+}
+
+#green {
+  border-top-color: #00bc3f;
+}
+
+#blue {
+  border-top-color: #06f;
+}
+
+#indigo {
+  border-top-color: #8a2be2;
+}
+
+#violet {
+  border-top-color: #d300c9;
+}
